--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.0",
     "lottie-web": "^5.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.3",
     "react-router-dom": "^7.9.4",
     "smooothy": "^0.0.26"
   },
@@ -23,6 +25,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-i18next": "^8.1.0",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,5 +41,4 @@
       "vite": "npm:rolldown-vite@7.1.14"
     }
   }
-  
 }
